tests/fixtures/errors/large-file/src/main.ts
import * as large from './large';
console.log(Object.keys(large).length);